--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center text-light">
+    <h1 class="display-4">Welcome to Ores and Cores!</h1>
+    <img src="~/assets/gifs/mining.gif" alt="Mining Animation" class="img-fluid my-3" />
+    <p>This is the home of all miners out there. Enter the mine, gather your riches and view your current value!</p>
 </div>
