--- a/Views/Ore/Index.cshtml
+++ b/Views/Ore/Index.cshtml
@@ -21,6 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Value)
             </th>
+            <th>
+                Image
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -35,6 +38,14 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Value)
+            </td>
+
+                        <td>
+                    @if (!string.IsNullOrEmpty(item.Name)) {
+                        <img src="@Url.Content("~/assets/images/ores/" + item.Name + ".png")" alt="Image for @item.Name" width="50" height="50" />
+                    } else {
+                        <span>No image available</span>
+                    }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
