--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,7 +17,22 @@ html {
   min-height: 100%;
 }
 
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: -1;
+}
+
 body {
+  background: url('/assets/images/backgrounds/mine.webp') no-repeat center center fixed;
+  background-size: cover;
+  box-shadow: 0 0 5rem rgba(0, 0, 0, .5);
+  height: 100%;
   margin-bottom: 60px;
 }
 
