update index of mine to use correct imports

--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -3,9 +3,12 @@
 }
 
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/josephg/noisejs@master/perlin.js"></script>
+<script src="~/js/entities.js"></script>
+<script src="~/js/scene-main.js"></script>
 <script src="~/js/mine.js"></script>
 
-<h2>Index</h2>
-
-<p>Hello from our View Template!</p>
-<div id="gameContainer" style="width: 800px; height: 600px;"></div>
+<div class="text-center text-light">
+    <h2>Let's get mining!</h2>
+    <div id="gameContainer" class="mx-auto d-block mb-4" style="width: 800px; height: 600px;"></div>
+</div>
