--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -5,7 +5,9 @@
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/josephg/noisejs@master/perlin.js"></script>
 <script src="~/js/entities.js"></script>
+<script src="~/js/scene-start.js"></script>
 <script src="~/js/scene-main.js"></script>
+<script src="~/js/scene-end.js"></script>
 <script src="~/js/mine.js"></script>
 
 <div class="text-center text-light">
