--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Inventory" asp-action="Index">test inventories</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="EnvironmentObject" asp-action="Index">test env objects</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Ore" asp-action="Index">Overview</a>
                         </li>
                         <li class="nav-item">
