add layout change and migrations

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="EnvironmentObject" asp-action="Index">test env objects</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">test items</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Ore" asp-action="Index">Overview</a>
                         </li>
                         <li class="nav-item">
