--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,34 +13,43 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/assets/images/logo.png" alt="OresAndCores" height="40">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Inventory" asp-action="Index">test inventories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="EnvironmentObject" asp-action="Index">test env objects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">test items</a>
-                        </li>
-                        <li class="nav-item">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"></li>
                             <a class="nav-link text-light" asp-area="" asp-controller="Ore" asp-action="Index">Overview</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="testMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Test Menu (development)
+                            </a>
+                            <ul class="dropdown-menu bg-dark w-100" aria-labelledby="testMenu">
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Inventory" asp-action="Index">test inventories</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="EnvironmentObject" asp-action="Index">test env objects</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">test items</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Mine" asp-action="Index">Go to the mine</a>
                         </li>
                         
-                        @{ await Html.RenderPartialAsync("_LoginPartial"); }
                     </ul>
+
+                                            <div>
+                             @{ await Html.RenderPartialAsync("_LoginPartial"); }
+                        </div>
                 </div>
             </div>
         </nav>
