--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -8,7 +8,8 @@
 <script src="https://cdn.jsdelivr.net/gh/josephg/noisejs@master/perlin.js"></script>
 <script src="~/js/entities.js"></script>
 <script src="~/js/scene-start.js"></script>
-<script src="~/js/scene-main.js"></script>
+<script src="~/js/scene-main.js"></script>\
+<script src="~/js/scene-death.js"></script>
 <script src="~/js/scene-end.js"></script>
 
 <div class="text-center text-light">
