--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                                     <a class="nav-link text-light" asp-area="" asp-controller="EnvironmentObject" asp-action="Index">test env objects</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Enemy" asp-action="Index">test enemies</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">test items</a>
                                 </li>
                             </ul>
