add scenes through import

--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -7,10 +7,6 @@
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/josephg/noisejs@master/perlin.js"></script>
 <script src="~/js/entities.js"></script>
-<script src="~/js/scene-start.js"></script>
-<script src="~/js/scene-main.js"></script>\
-<script src="~/js/scene-death.js"></script>
-<script src="~/js/scene-end.js"></script>
 
 <div class="text-center text-light">
     <h2>Let's get mining!</h2>
@@ -42,4 +38,4 @@
     console.log("Loaded enemies:", window.enemies);
 </script>
 
-<script src="~/js/mine.js"></script>
+<script type="module" src="~/js/mine.js"></script>
