add layout link and rerun migrations

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-light" asp-area="" asp-controller="Item" asp-action="Index">test items</a>
                                 </li>
+                                <li class="nav-item"></li>
+                                    <a class="nav-link text-light" asp-area="" asp-controller="LevelConfiguration" asp-action="Index">test level configs</a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item">
