--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -40,6 +40,7 @@
     })))
 
     console.log("Loaded Levels:", window.levelConfigurations);
+    console.log("Loaded Items:", window.items);
 </script>
 
 <script type="module" src="~/js/mine.js"></script>
