--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -43,6 +43,7 @@
     console.log("Loaded Levels:", window.levelConfigurations);
     console.log("Loaded Enemies:", window.enemies);
     console.log("Loaded Items:", window.items);
+    console.log("Loaded Objects:", window.environmentObjects);
 </script>
 
 <script type="module" src="~/js/mine.js"></script>
