add swing on tool name

--- a/Views/Mine/Index.cshtml
+++ b/Views/Mine/Index.cshtml
@@ -18,6 +18,9 @@
         e.Name,
         e.Path,
         e.Health,
+        e.MaterialType,
+        e.RequiredLevel,
+        e.Layer,
         Items = e.GetItems()
     })));
 
