--- a/Views/Inventory/Index.cshtml
+++ b/Views/Inventory/Index.cshtml
@@ -18,6 +18,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Data)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PlayerLevel)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PlayerMoney)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ToolData)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +38,15 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Data)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlayerLevel)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlayerMoney)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ToolData)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
